--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,22 @@
 name: Testing
-on: push
+
+on: 
+  push:
 
 jobs:
   test_project_airplane:
-  runs-on: ubuntu-latest
-  steps:
-  - uses: actions/checkout@v2
-  - name: Run Django unit tests
-    run: 
-      pip3 install --user django
-      python3 manage.py test
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install Django
+        run: pip install django
+
+      - name: Run Django unit tests
+        run: python manage.py test
