--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
         run: pip install django
 
       - name: Run Django unit tests
-        run: python manage.py test
+        run: python week4/learn/airline/manage.py test
