--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,10 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Django
-        run: pip install django
+      - name: Install dependencies
+        run: |
+          pip install django
+          pip install more_itertools
 
       - name: Run Django unit tests
         run: python week4/learn/airline/manage.py test
