--- a/FinalProject/PersonalFinanceTracker/requirements.txt
+++ b/FinalProject/PersonalFinanceTracker/requirements.txt
@@ -1,352 +1,6 @@
-absl-py==2.2.2
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.9.0
-appdirs==1.4.4
-apsw==3.36.0.post1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-asttokens==3.0.0
-astunparse==1.6.3
-async-lru==2.0.5
-async-timeout==5.0.1
-asyncio==3.4.3
-attrs==25.3.0
-babel==2.17.0
-backcall==0.2.0
-bcc==0.18.0
-beautifulsoup4==4.10.0
-beniget==0.4.1
-bitarray==3.4.2
-bitstring==4.3.1
-black==25.1.0
-bleach==6.2.0
-blinker==1.9.0
-Brlapi==0.8.3
-Brotli==1.0.9
-cachetools==5.5.2
-certifi==2025.4.26
-cffi==1.17.1
-chardet==4.0.0
-charset-normalizer==3.4.1
-chrome-gnome-shell==0.0.0
-click==8.2.0
-colorama==0.4.4
-comm==0.2.2
-command-not-found==0.3
-contourpy==1.3.2
-cryptography==3.4.8
-css-parser==1.0.7
-cssselect==1.1.0
-cssutils==1.0.2
-cupshelpers==1.0
-cycler==0.12.1
-dbus-python==1.2.18
-debugpy==1.8.14
-decorator==5.2.1
-defer==1.0.6
-defusedxml==0.7.1
-distro==1.7.0
-dj-database-url==3.0.1
-Django==5.2.1
-django-tailwind==4.2.0
-dnspython==2.1.0
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-ecdsa==0.19.1
-edge-tts==7.0.2
-esptool==4.7.0
-exceptiongroup==1.2.2
-executing==2.2.0
-fastjsonschema==2.21.1
-feedparser==6.0.8
-filelock==3.18.0
-Flask==3.1.1
-flatbuffers==25.2.10
-fonttools==4.57.0
-fqdn==1.5.1
-frozenlist==1.6.0
-fs==2.4.12
-fsspec==2025.5.0
-fuzzywuzzy==0.18.0
-gast==0.6.0
-git-filter-repo==2.34.0
-google-api-core==2.25.1
-google-api-python-client==2.177.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
-google-pasta==0.2.0
-googleapis-common-protos==1.70.0
-greenlet==1.1.2
-groq==0.29.0
-grpcio==1.71.0
-gyp==0.1
-h11==0.16.0
-h5py==3.13.0
-hidpidaemon==18.4.6
-html2text==2020.1.16
-html5-parser==0.4.10
-html5lib==1.1
-httpcore==1.0.9
-httplib2==0.20.2
-httpx==0.28.1
-idna==3.3
-ifaddr==0.1.7
-importlib-metadata==4.6.4
-intelhex==2.3.0
-ipykernel==6.29.5
-ipython==8.35.0
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.2
-jeepney==0.7.1
-jellyfish==0.11.2
-Jinja2==3.1.6
-jiter==0.10.0
-joblib==1.5.2
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.1
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-kazam==1.4.5
-keras==3.10.0
-kernelstub==3.1.4
-keyring==23.5.0
-kiwisolver==1.4.8
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lib50==3.0.12
-libclang==18.1.1
-llvmlite==0.44.0
-louis==3.20.0
-lxml==4.8.0
-lz4==3.1.3+dfsg
-macaroonbakery==1.3.1
-Markdown==3.8
-markdown-it-py==3.0.0
-markdown2==2.5.3
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mechanize==0.4.7
-mistune==3.1.3
-ml_dtypes==0.5.1
-more-itertools==8.10.0
-MouseInfo==0.1.3
-mpmath==1.3.0
-msgpack==1.0.3
-multidict==6.4.4
-mypy-extensions==0.4.3
-namex==0.0.9
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-netaddr==0.8.0
-netifaces==0.11.0
-networkx==3.4.2
-notebook==7.4.1
-notebook_shim==0.2.4
-notify2==0.3
-numba==0.61.2
-numpy==2.1.3
-nvidia-cublas-cu12==12.6.4.1
-nvidia-cuda-cupti-cu12==12.6.80
-nvidia-cuda-nvrtc-cu12==12.6.77
-nvidia-cuda-runtime-cu12==12.6.77
-nvidia-cudnn-cu12==9.5.1.17
-nvidia-cufft-cu12==11.3.0.4
-nvidia-cufile-cu12==1.11.1.6
-nvidia-curand-cu12==10.3.7.77
-nvidia-cusolver-cu12==11.7.1.2
-nvidia-cusparse-cu12==12.5.4.2
-nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.26.2
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu12==12.6.77
-oauthlib==3.2.0
-olefile==0.46
-openai==1.93.0
-openai-whisper==20240930
-openshot-qt==2.5.1
-opt_einsum==3.4.0
-optree==0.15.0
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==25.0
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pathspec==0.9.0
-pexpect==4.9.0
-pickleshare==0.7.5
-pillow==11.2.1
-platformdirs==4.3.7
-ply==3.11
-pop-transition==1.1.2
-prometheus_client==0.21.1
-prompt_toolkit==3.0.51
-propcache==0.3.1
-proto-plus==1.26.1
-protobuf==5.29.4
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py==1.10.0
-py7zr==0.11.3+dfsg
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-PyAudio==0.2.14
-PyAutoGUI==0.9.54
-pycairo==1.20.1
-pychm==0.8.6
-pycparser==2.22
-pycryptodomex==3.11.0
-pycups==2.0.1
-pydantic==2.11.7
-pydantic_core==2.33.2
-pydbus==0.6.0
-pydub==0.25.1
-PyGetWindow==0.0.9
-Pygments==2.19.1
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyMsgBox==1.0.9
-PyNaCl==1.5.0
-pynvim==0.4.2
-pyparsing==2.4.7
-pyperclip==1.9.0
-PyQt5==5.15.6
-PyQt5-sip==12.9.1
-PyQtWebEngine==5.15.5
-PyRect==0.2.0
-pyRFC3339==1.1
-pyrsistent==0.18.1
-PyScreeze==1.0.1
-pyserial==3.5
-PySocks==1.7.1
-python-apt==2.4.0+ubuntu4
-python-dateutil==2.9.0.post0
-python-debian==0.1.43+ubuntu1.1
-python-decouple==3.8
-python-dotenv==0.19.2
-python-gnupg==0.4.8
-python-json-logger==3.3.0
-python-telegram-bot==22.1
-python-xlib==0.29
-python3-xlib==0.15
-pythran==0.10.0
-pyttsx3==2.98
-pytweening==1.2.0
-pytz==2022.1
-pywhatkit==5.4
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==26.4.0
-razorpay==1.4.2
-reedsolo==1.7.0
-referencing==0.36.2
-regex==2024.11.6
-repolib==2.2.1
-repoman==1.4.0
-reportlab==3.6.8
-repoze.lru==0.7
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==0.9.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==14.0.0
-Routes==2.5.1
-rpds-py==0.24.0
-rsa==4.9.1
-scikit-learn==1.7.2
-scipy==1.15.3
-scour==0.38.2
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-Send2Trash==1.8.3
-sessioninstaller==0.0.0
-sgmllib3k==1.0.0
-six==1.16.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-sounddevice==0.5.2
-soupsieve==2.3.1
-SpeechRecognition==3.14.3
-speedtest-cli==2.1.3
-sqlparse==0.5.3
-srt==3.5.3
-stack-data==0.6.3
-submit50==3.2.0
-sympy==1.14.0
-systemd-python==234
-tabulate==0.9.0
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==1.1.0
-terminado==0.18.1
-texttable==1.6.4
-threadpoolctl==3.6.0
-tiktoken==0.9.0
-tinycss2==1.4.0
-tomli==2.2.1
-torch==2.7.0
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-trio==0.30.0
-trio-websocket==0.12.2
-triton==3.3.0
-types-python-dateutil==2.9.0.20241206
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-tzdata==2025.2
-ubuntu-drivers-common==0.0.0
-ufoLib2==0.13.1
-ufw==0.36.1
-unicodedata2==14.0.0
-uri-template==1.3.0
-uritemplate==4.2.0
-urllib3==2.4.0
-vboxapi==1.0
-vosk==0.3.45
-wadllib==1.3.6
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-WebOb==1.8.6
-websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.1.3
-whitenoise==6.9.0
-wikipedia==1.4.0
-wrapt==1.17.2
-wsproto==1.2.0
-xdg==5
-xkit==0.0.0
-yarl==1.20.0
-zeroconf==0.38.3
-zipp==1.0.0
+Django
+gunicorn
+whitenoise
+dj-database-url
+psycopg2-binary
+python-dotenv
